<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_margin="15dp"

        android:layout_height="wrap_content">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView

                        android:layout_marginLeft="15dp"
                        android:id="@+id/card_logo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                      >
                        <ImageView
                            android:layout_margin="5dp"
                            android:id="@+id/contact_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ico_role"
                            android:background="@android:color/transparent"
                            ></ImageView>
                    </androidx.cardview.widget.CardView>


                <LinearLayout android:layout_marginLeft="10dp"
                    android:layout_weight="50"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mosk_bold_700"
                        android:text="Sebastien Goubrievsky"
                        android:textColor="@color/colorBlack2"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:textColor="@color/colorBlack2"
                        android:text="@string/commercial"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorGrayDark"
                android:layout_height="1dp">

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_margin="15dp"
                android:id="@+id/phone_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/label_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textSize="12sp"
                        android:textColor="@color/colorGrayDark2"
                        />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:text="(+352) 621 293 415"
                        android:textColor="@color/colorBlack"

                        android:textSize="14sp" />
                </LinearLayout>
                <Button

                    android:elevation="25dp"
                    android:id="@+id/btn_call"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/radius"
                    android:fontFamily="@font/open_sans"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAllCaps="false"
                    android:text="@string/call"

                    >

                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="15dp"

                android:id="@+id/email_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_email"
                        android:fontFamily="@font/open_sans"
                        android:textSize="12sp"
                        android:textColor="@color/colorGrayDark2"
                        />
                    <TextView
                        android:id="@+id/email"

                        android:fontFamily="@font/open_sans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sebastien.goubrievsky@editus.lu"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        />
                </LinearLayout>

                <Button
                    android:textAllCaps="false"
                    android:fontFamily="@font/open_sans"
                    android:layout_gravity="right"
                    android:elevation="125dp"
                    android:id="@+id/btn_msg"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/radius"
                    android:text="@string/write"
                    >

                </Button>
            </LinearLayout></LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>